--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,48 +1,33 @@
-name: CI Pipeline
+name: CI
 
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]
   pull_request:
-    branches:
-      - main
+    branches: [ main ]
 
 jobs:
   test:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+      - name: Check out the code
+        uses: actions/checkout@v2
 
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v2
         with:
-          python-version: '3.10'  # or the Python version you need
+          python-version: "3.10"
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pytest pytest-cov pylint
+          pip install pandas pytest pytest-cov pylint
 
-      - name: Run pylint
-        run: |
-          pylint src/ tests/  # Lint the source and test directories
-        continue-on-error: true  # Optional: let the pipeline continue even if pylint fails
-
-      - name: Run tests with pytest and measure coverage
+      - name: Run tests with coverage
         run: |
           pytest --cov=src tests/
-        
-      - name: Upload coverage report
-        uses: actions/upload-artifact@v3
-        with:
-          name: coverage-report
-          path: .coverage  # Uploads the coverage report to the GitHub Actions page for review
-          
+
       - name: Run pylint
-        env:
-          PYTHONPATH: ./src
         run: |
           pylint src/ tests/
